--- a/views/kontakt.hbs
+++ b/views/kontakt.hbs
@@ -35,7 +35,7 @@
 <body>
     <h1>{{title}}</h1>
     <p>{{description}}</p>
-    <form action="/kontakt" method="POST">
+    <form action="/form" method="POST">
         <label for="pole1">pole1</label>
         <input type="text" name="pole1" id="pole1">
         <label for="pole2">pole1</label>
@@ -48,12 +48,6 @@
         <input type="date" name="wiek" id="wiek">
         <button type="submit">Wyślij</button>
     </form>
-    <div>
-        <p>{{content}}</p>
-        <p>{{wiek}}</p>
-        <p>{{litery}}</p>
-
-    </div>
 
 </body>
 
